<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginEnd="5dip"
        android:layout_marginStart="5dip"
        android:layout_marginTop="5dip"
        android:text="@string/category_wight"
        android:textColor="@color/colorCardBg"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/set_font_size"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/numPicker_main_selectNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_main_demo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/appwidget_text"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/set_font_color"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_main_inputColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:hint="@string/input_color_value"
                android:maxLength="6"
                android:maxLines="1"
                android:textSize="18sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/custom_yiyan"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_main_inputYiYan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:hint="@string/input_custom_text"
                android:maxLength="6"
                android:maxLines="1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/set_click_event"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_main_selectClickEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                tools:listitem="@android:layout/simple_list_item_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/set_alien"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_main_selectGravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                tools:listitem="@android:layout/simple_list_item_1" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toggle_main_textFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:text="@string/yiyan_from"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toggle_main_addDot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:text="@string/add_dot"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>