<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="top.huahaizhi.onlyu.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip">

            <!-- 网络   -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/category_internet"
                android:textColor="@color/colorCardBg"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dip"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/type_of_yiyan"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_main_selectType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        tools:listitem="@android:layout/simple_list_item_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/sleep_time"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_main_selectTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        tools:listitem="@android:layout/simple_list_item_1" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- 本地   -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginEnd="5dip"
                android:layout_marginStart="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/category_local"
                android:textColor="@color/colorCardBg"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dip"
                    android:orientation="vertical">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/toggle_main_saveYiYan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dip"
                        android:text="@string/save_yiyan_to_local"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/bt_main_showLocalYiYan"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/saved_content"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- 小组件   -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginEnd="5dip"
                android:layout_marginStart="5dip"
                android:layout_marginTop="5dip"
                android:text="@string/category_wight"
                android:textColor="@color/colorCardBg"
                android:textSize="20sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/set_font_size"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <NumberPicker
                            android:id="@+id/numPicker_main_selectNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/text_main_demo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.5"
                            android:text="@string/appwidget_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/set_font_color"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/et_main_inputColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:hint="@string/input_color_value"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/custom_yiyan"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/et_main_inputYiYan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:hint="@string/input_custom_text"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/set_click_event"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_main_selectClickEvent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        tools:listitem="@android:layout/simple_list_item_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        android:text="@string/set_alien"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner_main_selectGravity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dip"
                        tools:listitem="@android:layout/simple_list_item_1" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/toggle_main_textFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dip"
                        android:text="@string/yiyan_from"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/toggle_main_addDot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dip"
                        android:text="@string/add_dot"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_main_donate"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donate"
                    android:textColor="@color/colorAccent" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_main_about"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
