<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginEnd="5dip"
        android:layout_marginStart="5dip"
        android:layout_marginTop="5dip"
        android:text="@string/category_local"
        android:textColor="@color/colorCardBg"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toggle_main_saveYiYan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/save_yiyan_to_local"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_main_showLocalYiYan"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/saved_content"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>