<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/category_internet"
        android:textColor="@color/colorCardBg"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dip"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/type_of_yiyan"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_main_selectType"
                tools:listitem="@android:layout/simple_list_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:text="@string/sleep_time"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_main_selectTime"
                tools:listitem="@android:layout/simple_list_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>